--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "geo",
     "maps"
   ],
+  "bin": {
+    "tokml": "tokml"
+  },
   "author": "Tom MacWright",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "expect.js": "~0.2.0",
     "mocha": "~1.13.0"
+  },
+  "dependencies": {
+    "minimist": "0.0.5"
   }
 }
