--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "minimist": "0.0.5",
     "concat-stream": "~1.0.1",
-    "sharkdown": "0.0.1"
+    "sharkdown": "0.0.1",
+    "strxml": "0.0.0"
   }
 }
