--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "minimist": "0.1.0",
+    "rw": "0.0.4",
     "strxml": "1.0.0",
-    "rw": "0.0.4"
+    "xml-escape": "^1.1.0"
   }
 }
