--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "minimist": "0.1.0",
     "rw": "0.0.4",
-    "strxml": "1.0.0",
+    "strxml": "mapbox/strxml",
     "xml-escape": "^1.1.0"
   }
 }
